tests/negative/semantics/assign_to_let.stream
// EXPECT: ERROR
let x = 10;
// This should crash the compiler because 'let' is immutable
x = 20;